--- a/packages/ui/src/components/input-group/InputGroup.astro
+++ b/packages/ui/src/components/input-group/InputGroup.astro
@@ -17,7 +17,7 @@
  *   </InputGroup>
  *
  *   <InputGroup>
- *     <InputGroupInput placeholder="example.com" class="!pl-1" />
+ *     <InputGroupInput placeholder="example.com" />
  *     <InputGroupAddon>
  *       <InputGroupText>https://</InputGroupText>
  *     </InputGroupAddon>
@@ -55,30 +55,70 @@
  *   <InputGroupAddon><SearchIcon /></InputGroupAddon>
  * </InputGroup>
  * ```
+ *
+ * @examples
+ *
+ * ### Sizes
+ *
+ * <div class="grid w-full max-w-sm gap-3">
+ *   <InputGroup size="sm">
+ *     <InputGroupInput placeholder="Small (h-8)" />
+ *   </InputGroup>
+ *   <InputGroup>
+ *     <InputGroupInput placeholder="Default (h-9)" />
+ *   </InputGroup>
+ *   <InputGroup size="lg">
+ *     <InputGroupInput placeholder="Large (h-10)" />
+ *   </InputGroup>
+ * </div>
+ *
+ * @api
+ *
+ * | Prop | Type | Default |
+ * | --- | --- | --- |
+ * | `size` | `"sm" \| "default" \| "lg"` | `"default"` |
  */
 import type { HTMLAttributes, HTMLTag } from "astro/types";
+import { cva, type VariantProps } from "class-variance-authority";
 import { cn } from "@bejamas/ui/lib/utils";
 
 type Props = {
   as?: HTMLTag;
+  size?: VariantProps<typeof inputGroupVariants>["size"];
   class?: string;
 } & HTMLAttributes<"div">;
 
 const {
   as: Tag = "div",
+  size = "default",
   class: className = "",
   ...rest
 } = Astro.props as Props;
 
-const rootClasses =
-  "border-input dark:bg-input/30 has-[[data-slot=input-group-control]:focus-visible]:border-ring has-[[data-slot=input-group-control]:focus-visible]:ring-ring/50 has-[[data-slot][aria-invalid=true]]:ring-destructive/20 has-[[data-slot][aria-invalid=true]]:border-destructive dark:has-[[data-slot][aria-invalid=true]]:ring-destructive/40 has-disabled:bg-input/50 dark:has-disabled:bg-input/80 h-8 rounded-lg border transition-colors in-data-[slot=combobox-content]:focus-within:border-inherit in-data-[slot=combobox-content]:focus-within:ring-0 has-disabled:opacity-50 has-[[data-slot=input-group-control]:focus-visible]:ring-3 has-[[data-slot][aria-invalid=true]]:ring-3 has-[>[data-align=block-end]]:h-auto has-[>[data-align=block-end]]:flex-col has-[>[data-align=block-start]]:h-auto has-[>[data-align=block-start]]:flex-col has-[>[data-align=block-end]]:[&>input]:pt-3 has-[>[data-align=block-start]]:[&>input]:pb-3 has-[>[data-align=inline-end]]:[&>input]:pr-1.5 has-[>[data-align=inline-start]]:[&>input]:pl-1.5 group/input-group relative flex w-full min-w-0 items-center outline-none has-[>textarea]:h-auto";
+const inputGroupVariants = cva(
+  "border-input dark:bg-input/30 has-[[data-slot=input-group-control]:focus-visible]:border-ring has-[[data-slot=input-group-control]:focus-visible]:ring-ring/50 has-[[data-slot][aria-invalid=true]]:ring-destructive/20 has-[[data-slot][aria-invalid=true]]:border-destructive dark:has-[[data-slot][aria-invalid=true]]:ring-destructive/40 has-disabled:bg-input/50 dark:has-disabled:bg-input/80 rounded-lg border transition-colors in-data-[slot=combobox-content]:focus-within:border-inherit in-data-[slot=combobox-content]:focus-within:ring-0 has-disabled:opacity-50 has-[[data-slot=input-group-control]:focus-visible]:ring-3 has-[[data-slot][aria-invalid=true]]:ring-3 has-[>[data-align=block-end]]:h-auto has-[>[data-align=block-end]]:flex-col has-[>[data-align=block-start]]:h-auto has-[>[data-align=block-start]]:flex-col has-[>textarea]:h-auto group/input-group relative flex w-full min-w-0 items-center outline-none",
+  {
+    variants: {
+      size: {
+        sm: "h-8 has-[>[data-align=block-end]]:[&>input[data-slot=input-group-control]]:pt-2 has-[>[data-align=block-start]]:[&>input[data-slot=input-group-control]]:pb-2 has-[>[data-align=inline-end]]:[&>[data-slot=input-group-control]]:pr-1.5 has-[>[data-align=inline-start]]:[&>[data-slot=input-group-control]]:pl-1.5",
+        default:
+          "h-9 has-[>[data-align=block-end]]:[&>input[data-slot=input-group-control]]:pt-2.5 has-[>[data-align=block-start]]:[&>input[data-slot=input-group-control]]:pb-2.5 has-[>[data-align=inline-end]]:[&>[data-slot=input-group-control]]:pr-1.5 has-[>[data-align=inline-start]]:[&>[data-slot=input-group-control]]:pl-1.5",
+        lg: "h-10 has-[>[data-align=block-end]]:[&>input[data-slot=input-group-control]]:pt-3 has-[>[data-align=block-start]]:[&>input[data-slot=input-group-control]]:pb-3 has-[>[data-align=inline-end]]:[&>[data-slot=input-group-control]]:pr-2 has-[>[data-align=inline-start]]:[&>[data-slot=input-group-control]]:pl-2",
+      },
+    },
+    defaultVariants: {
+      size: "default",
+    },
+  },
+);
 ---
 
 <Tag
   {...rest}
   role="group"
   data-slot="input-group"
-  class={cn(rootClasses, className)}
+  data-size={size}
+  class={cn(inputGroupVariants({ size }), className)}
 >
   <slot />
 </Tag>
