--- a/packages/ui/src/components/input-group/InputGroupAddon.astro
+++ b/packages/ui/src/components/input-group/InputGroupAddon.astro
@@ -1,5 +1,5 @@
 ---
-import type { HTMLAttributes, HTMLTag } from "astro/types";
+import type { HTMLAttributes } from "astro/types";
 import { cva } from "class-variance-authority";
 import { cn } from "@bejamas/ui/lib/utils";
 
@@ -17,18 +17,18 @@ const {
 } = Astro.props as Props;
 
 const addonVariants = cva(
-  "text-muted-foreground h-auto gap-2 py-1.5 text-sm font-medium group-data-[disabled=true]/input-group:opacity-50 [&>kbd]:rounded-[calc(var(--radius)-5px)] [&>svg:not([class*='size-'])]:size-4 flex cursor-text items-center justify-center select-none",
+  "text-muted-foreground h-auto group-data-[size=sm]/input-group:py-1.5 group-data-[size=default]/input-group:py-2 group-data-[size=lg]/input-group:py-2.5 gap-2 font-medium group-data-[size=sm]/input-group:text-xs group-data-[size=default]/input-group:text-sm group-data-[size=lg]/input-group:text-base group-data-[disabled=true]/input-group:opacity-50 [&>kbd]:rounded-[calc(var(--radius)-5px)] [&>svg:not([class*='size-'])]:size-4 group-data-[size=sm]/input-group:[&>svg:not([class*='size-'])]:size-3.5 flex cursor-text items-center justify-center select-none",
   {
     variants: {
       align: {
         "inline-start":
-          "pl-2 has-[>button]:ml-[-0.3rem] has-[>kbd]:ml-[-0.15rem] order-first",
+          "order-first pl-2 has-[button]:ml-[-0.3rem] has-[[data-slot=input-group-button]]:ml-[-0.3rem] has-[kbd]:ml-[-0.15rem]",
         "inline-end":
-          "pr-2 has-[>button]:mr-[-0.3rem] has-[>kbd]:mr-[-0.15rem] order-last",
+          "order-last pr-2 has-[button]:mr-[-0.3rem] has-[[data-slot=input-group-button]]:mr-[-0.3rem] has-[kbd]:mr-[-0.15rem]",
         "block-start":
-          "px-2.5 pt-2 group-has-[>input]/input-group:pt-2 [.border-b]:mb-2 order-first w-full justify-start",
+          "order-first w-full justify-start group-data-[size=sm]/input-group:px-2.5 group-data-[size=default]/input-group:px-3 group-data-[size=lg]/input-group:px-3.5 pt-2 group-has-[>[data-slot=input-group-control]]/input-group:pt-2 [.border-b]:mb-2",
         "block-end":
-          "px-2.5 pb-2 group-has-[>input]/input-group:pb-2 [.border-t]:mt-2 order-last w-full justify-start",
+          "order-last w-full justify-start group-data-[size=sm]/input-group:px-2.5 group-data-[size=default]/input-group:px-3 group-data-[size=lg]/input-group:px-3.5 pb-2 group-has-[>[data-slot=input-group-control]]/input-group:pb-2 [.border-t]:mt-2",
       },
     },
     defaultVariants: {
