--- a/packages/ui/src/components/input-group/InputGroupInput.astro
+++ b/packages/ui/src/components/input-group/InputGroupInput.astro
@@ -11,6 +11,9 @@ type Props = {
 const { as: rawTag, class: className = "", ...rest } = Astro.props as Props;
 
 const Tag = rawTag ?? undefined;
+
+const controlClasses =
+  "rounded-none border-0 bg-transparent shadow-none ring-0 focus-visible:ring-0 disabled:bg-transparent aria-invalid:ring-0 dark:bg-transparent dark:disabled:bg-transparent flex-1 min-w-0 group-data-[size=sm]/input-group:h-8 group-data-[size=sm]/input-group:px-2.5 group-data-[size=sm]/input-group:py-1 group-data-[size=sm]/input-group:text-xs group-data-[size=default]/input-group:h-9 group-data-[size=default]/input-group:px-3 group-data-[size=default]/input-group:py-1 group-data-[size=default]/input-group:text-sm group-data-[size=lg]/input-group:h-10 group-data-[size=lg]/input-group:px-3.5 group-data-[size=lg]/input-group:py-1.5 group-data-[size=lg]/input-group:text-base";
 ---
 
 {
@@ -18,18 +21,12 @@ const Tag = rawTag ?? undefined;
     <Tag
       {...rest}
       data-slot="input-group-control"
-      class={cn(
-        "rounded-none border-0 bg-transparent shadow-none ring-0 focus-visible:ring-0 disabled:bg-transparent aria-invalid:ring-0 dark:bg-transparent dark:disabled:bg-transparent flex-1",
-        className,
-      )}
+      class={cn(controlClasses, className)}
     />
   ) : (
     <Input
       data-slot="input-group-control"
-      class={cn(
-        "rounded-none border-0 bg-transparent shadow-none ring-0 focus-visible:ring-0 disabled:bg-transparent aria-invalid:ring-0 dark:bg-transparent dark:disabled:bg-transparent flex-1",
-        className,
-      )}
+      class={cn(controlClasses, className)}
       {...(rest as any)}
     />
   )
