--- a/packages/ui/src/components/select/SelectTrigger.astro
+++ b/packages/ui/src/components/select/SelectTrigger.astro
@@ -24,7 +24,7 @@ const {
     "border-input data-[placeholder]:text-muted-foreground dark:bg-input/30 dark:hover:bg-input/50",
     "focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]",
     "aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive aria-invalid:ring-[3px]",
-    "flex w-full items-center justify-between gap-1.5 rounded-lg border bg-transparent px-3 py-2 text-sm shadow-xs",
+    "flex w-full items-center justify-between gap-1.5 rounded-lg border bg-transparent px-3 py-2 text-sm",
     "whitespace-nowrap outline-none select-none transition-colors",
     "disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50",
     "data-[size=sm]:h-8 data-[size=default]:h-9 data-[size=lg]:h-10",
@@ -34,5 +34,8 @@ const {
   )}
 >
   <slot />
-  <ChevronDownIcon class="size-4 text-muted-foreground" data-slot="select-icon" />
+  <ChevronDownIcon
+    class="size-4 text-muted-foreground -mr-0.75"
+    data-slot="select-icon"
+  />
 </button>
