--- a/packages/ui/src/components/dropdown-menu/DropdownMenuContent.astro
+++ b/packages/ui/src/components/dropdown-menu/DropdownMenuContent.astro
@@ -21,7 +21,7 @@ const {
 } = Astro.props as Props;
 
 const contentVariants = cva([
-  "z-50 hidden data-[state=open]:block [transition:display_150ms_allow-discrete] starting:data-[state=closed]:block outline-hidden",
+  "z-50 outline-hidden",
   "min-w-32 overflow-hidden rounded-md border border-border bg-popover p-1 text-popover-foreground shadow-md",
   "data-[state=open]:animate-in data-[state=closed]:animate-out",
   "data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0",
@@ -33,6 +33,7 @@ const contentVariants = cva([
 
 <div
   {...rest}
+  hidden
   data-slot="dropdown-menu-content"
   data-align={align}
   data-align-offset={alignOffset}
