--- a/packages/ui/src/components/link-group/LinkGroup.astro
+++ b/packages/ui/src/components/link-group/LinkGroup.astro
@@ -11,7 +11,7 @@
  *   <LinkGroupTitle>Company</LinkGroupTitle>
  *   <LinkGroupList>
  *     <LinkGroupItem><a href="/">Home</a></LinkGroupItem>
- *     <LinkGroupItem><a href="/about">About</a></LinkGroupItem>
+ *     <LinkGroupItem><a href="#">About</a></LinkGroupItem>
  *   </LinkGroupList>
  * </LinkGroup>
  *
