feat: add margin to the card hero

--- a/apps/web/src/components/UiDemo.astro
+++ b/apps/web/src/components/UiDemo.astro
@@ -222,7 +222,7 @@ const countries = [
   <div class="space-y-6">
     <!-- Blog Post Card -->
     <Card>
-      <CardMedia>
+      <CardMedia class="m-1">
         <img
           src="https://gradient.bejamas.com/api/gradient.png?funkiness=30&contrast=0&w=748&h=500&seed=bejamas"
           alt="Gradient Cover"
