--- a/apps/web/src/components/UiDemo.astro
+++ b/apps/web/src/components/UiDemo.astro
@@ -286,31 +286,31 @@ const countries = [
     <!-- Marquee -->
     <div class="mt-8">
       <Marquee class="dark:invert">
-        <Image
+        <img
           src="/demo/logo/sonos.svg"
           alt="Sonos"
           class="h-5 self-center mx-10"
           loading="lazy"
         />
-        <Image
+        <img
           src="/demo/logo/uber.svg"
           alt="Uber"
           class="h-5 self-center mx-10"
           loading="lazy"
         />
-        <Image
+        <img
           src="/demo/logo/visa.svg"
           alt="Visa"
           class="h-5 self-center mx-10"
           loading="lazy"
         />
-        <Image
+        <img
           src="/demo/logo/coca-cola.svg"
           alt="Coca-Cola"
           class="h-6 self-center mx-10"
           loading="lazy"
         />
-        <Image
+        <img
           src="/demo/logo/nike.svg"
           alt="Nike"
           class="h-5 self-center mx-10"
