--- a/apps/web/src/components/UiDemo.astro
+++ b/apps/web/src/components/UiDemo.astro
@@ -224,7 +224,7 @@ const countries = [
     <!-- Blog Post Card -->
     <Card>
       <CardMedia class="m-1">
-        <img
+        <Image
           src="https://gradient.bejamas.com/api/gradient.png?funkiness=30&contrast=0&w=748&h=500&seed=bejamas"
           alt="Gradient Cover"
           class="w-full h-full object-cover"
@@ -237,17 +237,25 @@ const countries = [
         <div class="flex items-center gap-2 justify-between">
           <AvatarGroup>
             <Avatar>
-              <AvatarImage
-                src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas-avatar"
-                alt="grdient avatar"
-              />
+              <AvatarImage>
+                <Image
+                  src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas-avatar"
+                  alt="grdient avatar"
+                  width={32}
+                  height={32}
+                />
+              </AvatarImage>
               <AvatarFallback>AW</AvatarFallback>
             </Avatar>
             <Avatar>
-              <AvatarImage
-                src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas-avatar-2"
-                alt="grdient avatar"
-              />
+              <AvatarImage>
+                <Image
+                  src="https://gradient.bejamas.com/api/gradient.png?funkiness=90&contrast=0&w=80&h=80&seed=bejamas-avatar-2"
+                  alt="grdient avatar"
+                  width={32}
+                  height={32}
+                />
+              </AvatarImage>
               <AvatarFallback>AW</AvatarFallback>
             </Avatar>
           </AvatarGroup>
